hard-gists/71eda2aab0ee32d19b01/run.log
=== Docker Run Log for 71eda2aab0ee32d19b01 ===
Started at: Mi 29. Okt 17:02:26 CET 2025

[2025-10-29 17:02:27] START: Running container for 71eda2aab0ee32d19b01
[2025-10-29 17:02:27] SUCCESS: Container 3ea7386897d89cf5f5738369bbd533dba1671cb4f803bddb6b2f9312052bab63 started for 71eda2aab0ee32d19b01
=== Container logs for 71eda2aab0ee32d19b01 ===
  File "/snippet.py", line 26
    print item if item else '',
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 71eda2aab0ee32d19b01 ===
[2025-10-29 17:02:29] INFO: Container 3ea7386897d89cf5f5738369bbd533dba1671cb4f803bddb6b2f9312052bab63 has stopped
